<resources>
  <string name="app_name">IsCalculator</string>
  <string name="zero">0</string>
  <string name="one">1</string>
  <string name="two">2</string>
  <string name="three">3</string>
  <string name="four">4</string>
  <string name="five">5</string>
  <string name="six">6</string>
  <string name="seven">7</string>
  <string name="eight">8</string>
  <string name="nine">9</string>
  <string name="double_zero">00</string>
  <string name="plus">+</string>
  <string name="minus">-</string>
  <string name="multiplier">*</string>
  <string name="devide">/</string>
  <string name="ceremory">~</string>
  <string name="power">^</string>
  <string name="power2">^</string>
  <string name="dot">.</string>
  <string name="delete">DEL</string>
  <string name="clear">C</string>
  <string name="CE">CE</string>
  <string name="equal">=</string>
  <string name="remainder">%</string>
</resources>
